# cloudflareupdated

./: .gitignore  .pre-commit-config.yaml  Cargo.toml  README.md  default.nix  flake.nix  shell.nix
.github/workflows/: build.yaml
configs/: cloudflareupdated.service  cloudflareupdated.timer  example-settings.yaml
src/: api.rs  mailer.rs  main.rs  responses.rs  structs.rs
