[package]
name = "cloudflareupdated"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "3.1.8"
reqwest = { version = "0.11.10",  features = ["json"]}
serde = { version = "1.0.136", features = ["serde_derive"] }
serde_yaml = "0.8.23"
tokio = { version = "1.17.0", features = ["rt-multi-thread","macros"] }
lettre = "0.10.0-rc.5"
